fixed scrollbar button

--- a/styles/showcase.scss
+++ b/styles/showcase.scss
@@ -67,9 +67,21 @@
 }
 
 .fa-angle-left {
-  color:tomato !important;
+  color:rgba(53, 52, 52, 0.459);
+  font-size: x-large;
+}
+
+.fa-angle-left:hover {
+  color:rgba(242, 238, 238, 0.873);
+  font-size: x-large;
 }
 
 .fa-angle-right {
-  color:tomato !important;
+  color:rgba(53, 52, 52, 0.459);
+  font-size: x-large;
+}
+
+.fa-angle-right:hover {
+  color:rgba(242, 238, 238, 0.873);
+  font-size: x-large;
 }
